--- a/Base/Lang_Skills.yml
+++ b/Base/Lang_Skills.yml
@@ -16,22 +16,30 @@ Amlos.Combat.ActiveSkill.Bubbles.desc: "BubblesDesc."
 Amlos.Combat.ActiveSkill.Bubbles.name: "Bubbles"
 Amlos.Combat.ActiveSkill.BurningBlade.desc: "BurningBladeDesc."
 Amlos.Combat.ActiveSkill.BurningBlade.name: "BurningBlade"
+Amlos.Combat.ActiveSkill.ChargeTest.desc: "ChargeTestDesc."
+Amlos.Combat.ActiveSkill.ChargeTest.name: "ChargeTest"
 Amlos.Combat.ActiveSkill.CrushingClaw.desc: "CrushingClawDesc."
 Amlos.Combat.ActiveSkill.CrushingClaw.name: "CrushingClaw"
 Amlos.Combat.ActiveSkill.DarkBeam.desc: "DarkBeamDesc."
 Amlos.Combat.ActiveSkill.DarkBeam.name: "DarkBeam"
+Amlos.Combat.ActiveSkill.DarkChain.desc: "DarkChainDesc."
+Amlos.Combat.ActiveSkill.DarkChain.name: "DarkChain"
 Amlos.Combat.ActiveSkill.DarkFlare.desc: "DarkFlareDesc."
 Amlos.Combat.ActiveSkill.DarkFlare.name: "DarkFlare"
 Amlos.Combat.ActiveSkill.DarkRadiation.desc: "DarkRadiationDesc."
 Amlos.Combat.ActiveSkill.DarkRadiation.name: "DarkRadiation"
 Amlos.Combat.ActiveSkill.DustCloud.desc: "DustCloudDesc."
 Amlos.Combat.ActiveSkill.DustCloud.name: "DustCloud"
+Amlos.Combat.ActiveSkill.DustStorm.desc: "DustStormDesc."
+Amlos.Combat.ActiveSkill.DustStorm.name: "DustStorm"
 Amlos.Combat.ActiveSkill.Earthball.desc: "EarthballDesc."
 Amlos.Combat.ActiveSkill.Earthball.name: "Earthball"
 Amlos.Combat.ActiveSkill.EarthenClaymore.desc: "EarthenClaymoreDesc."
 Amlos.Combat.ActiveSkill.EarthenClaymore.name: "EarthenClaymore"
 Amlos.Combat.ActiveSkill.EarthSpike.desc: "EarthSpikeDesc."
 Amlos.Combat.ActiveSkill.EarthSpike.name: "EarthSpike"
+Amlos.Combat.ActiveSkill.EraserBall.desc: "EraserBallDesc."
+Amlos.Combat.ActiveSkill.EraserBall.name: "EraserBall"
 Amlos.Combat.ActiveSkill.Eruption.desc: "EruptionDesc."
 Amlos.Combat.ActiveSkill.Eruption.name: "Eruption"
 Amlos.Combat.ActiveSkill.Fireball.desc: "FireballDesc."
@@ -42,6 +50,8 @@ Amlos.Combat.ActiveSkill.FirePillars.desc: "FirePillarsDesc."
 Amlos.Combat.ActiveSkill.FirePillars.name: "FirePillars"
 Amlos.Combat.ActiveSkill.FlameMine.desc: "FlameMineDesc."
 Amlos.Combat.ActiveSkill.FlameMine.name: "FlameMine"
+Amlos.Combat.ActiveSkill.FlareDetonator.desc: "FlareDetonatorDesc."
+Amlos.Combat.ActiveSkill.FlareDetonator.name: "FlareDetonator"
 Amlos.Combat.ActiveSkill.FlowerPower.desc: "FlowerPowerDesc."
 Amlos.Combat.ActiveSkill.FlowerPower.name: "FlowerPower"
 Amlos.Combat.ActiveSkill.FlowofWater.desc: "FlowofWaterDesc."
@@ -56,20 +66,32 @@ Amlos.Combat.ActiveSkill.HolyLight.desc: "HolyLightDesc."
 Amlos.Combat.ActiveSkill.HolyLight.name: "HolyLight"
 Amlos.Combat.ActiveSkill.IcicleBoulder.desc: "IcicleBoulderDesc."
 Amlos.Combat.ActiveSkill.IcicleBoulder.name: "IcicleBoulder"
+Amlos.Combat.ActiveSkill.LakeOfFire.desc: "LakeOfFireDesc."
+Amlos.Combat.ActiveSkill.LakeOfFire.name: "LakeOfFire"
 Amlos.Combat.ActiveSkill.LibrarysDraft.desc: "LibrarysDraftDesc."
 Amlos.Combat.ActiveSkill.LibrarysDraft.name: "LibrarysDraft"
+Amlos.Combat.ActiveSkill.LightBarrier.desc: "LightBarrierDesc."
+Amlos.Combat.ActiveSkill.LightBarrier.name: "LightBarrier"
 Amlos.Combat.ActiveSkill.LightGuardian.desc: "LightGuardianDesc."
 Amlos.Combat.ActiveSkill.LightGuardian.name: "LightGuardian"
+Amlos.Combat.ActiveSkill.LightSalvation.desc: "LightSalvationDesc."
+Amlos.Combat.ActiveSkill.LightSalvation.name: "LightSalvation"
 Amlos.Combat.ActiveSkill.LunarSlash.desc: "LunarSlashDesc."
 Amlos.Combat.ActiveSkill.LunarSlash.name: "LunarSlash"
+Amlos.Combat.ActiveSkill.MagicChessPiece.desc: "MagicChessPieceDesc."
+Amlos.Combat.ActiveSkill.MagicChessPiece.name: "MagicChessPiece"
 Amlos.Combat.ActiveSkill.Meteor.desc: "MeteorDesc."
 Amlos.Combat.ActiveSkill.Meteor.name: "Meteor"
+Amlos.Combat.ActiveSkill.MultiGust.desc: "MultiGustDesc."
+Amlos.Combat.ActiveSkill.MultiGust.name: "MultiGust"
 Amlos.Combat.ActiveSkill.None.desc: "NoneDesc."
 Amlos.Combat.ActiveSkill.None.name: "None"
 Amlos.Combat.ActiveSkill.PurifyHeart.desc: "PurifyHeartDesc."
 Amlos.Combat.ActiveSkill.PurifyHeart.name: "PurifyHeart"
 Amlos.Combat.ActiveSkill.RazorTempest.desc: "RazorTempestDesc."
 Amlos.Combat.ActiveSkill.RazorTempest.name: "RazorTempest"
+Amlos.Combat.ActiveSkill.ReleaseThePlague.desc: "ReleaseThePlagueDesc."
+Amlos.Combat.ActiveSkill.ReleaseThePlague.name: "ReleaseThePlague"
 Amlos.Combat.ActiveSkill.ShadowDomain.desc: "ShadowDomainDesc."
 Amlos.Combat.ActiveSkill.ShadowDomain.name: "ShadowDomain"
 Amlos.Combat.ActiveSkill.ShimmeringBlessing.desc: "ShimmeringBlessingDesc."
@@ -80,12 +102,18 @@ Amlos.Combat.ActiveSkill.SomethingForNothing.desc: "SomethingForNothingDesc."
 Amlos.Combat.ActiveSkill.SomethingForNothing.name: "SomethingForNothing"
 Amlos.Combat.ActiveSkill.SoulBank.desc: "SoulBankDesc."
 Amlos.Combat.ActiveSkill.SoulBank.name: "SoulBank"
+Amlos.Combat.ActiveSkill.SoulCharge.desc: "SoulChargeDesc."
+Amlos.Combat.ActiveSkill.SoulCharge.name: "SoulCharge"
 Amlos.Combat.ActiveSkill.SoulTrap.desc: "SoulTrapDesc."
 Amlos.Combat.ActiveSkill.SoulTrap.name: "SoulTrap"
 Amlos.Combat.ActiveSkill.SpaceDistortion.desc: "SpaceDistortionDesc."
 Amlos.Combat.ActiveSkill.SpaceDistortion.name: "SpaceDistortion"
+Amlos.Combat.ActiveSkill.SpatialCollapse.desc: "SpatialCollapseDesc."
+Amlos.Combat.ActiveSkill.SpatialCollapse.name: "SpatialCollapse"
 Amlos.Combat.ActiveSkill.SpiritLink.desc: "SpiritLinkDesc."
 Amlos.Combat.ActiveSkill.SpiritLink.name: "SpiritLink"
+Amlos.Combat.ActiveSkill.SpiritWarrior.desc: "SpiritWarriorDesc."
+Amlos.Combat.ActiveSkill.SpiritWarrior.name: "SpiritWarrior"
 Amlos.Combat.ActiveSkill.SuperNova.desc: "SuperNovaDesc."
 Amlos.Combat.ActiveSkill.SuperNova.name: "SuperNova"
 Amlos.Combat.ActiveSkill.Superposition.desc: "SuperpositionDesc."
@@ -96,6 +124,10 @@ Amlos.Combat.ActiveSkill.VaccumOrb.desc: "VaccumOrbDesc."
 Amlos.Combat.ActiveSkill.VaccumOrb.name: "VaccumOrb"
 Amlos.Combat.ActiveSkill.Waterball.desc: "WaterballDesc."
 Amlos.Combat.ActiveSkill.Waterball.name: "Waterball"
+Amlos.Combat.ActiveSkill.WaterGun.desc: "WaterGunDesc."
+Amlos.Combat.ActiveSkill.WaterGun.name: "WaterGun"
+Amlos.Combat.ActiveSkill.WaterWall.desc: "WaterWallDesc."
+Amlos.Combat.ActiveSkill.WaterWall.name: "WaterWall"
 Amlos.Combat.ActiveSkill.WindBarrage.desc: "WindBarrageDesc."
 Amlos.Combat.ActiveSkill.WindBarrage.name: "WindBarrage"
 Amlos.Combat.ActiveSkill.WindBlade.desc: "WindBladeDesc."
@@ -108,3 +140,19 @@ Amlos.Combat.ActiveSkill.WindStorm.desc: "WindStormDesc."
 Amlos.Combat.ActiveSkill.WindStorm.name: "WindStorm"
 Amlos.Combat.ActiveSkill.WindWall.desc: "WindWallDesc."
 Amlos.Combat.ActiveSkill.WindWall.name: "WindWall"
+Amlos.Combat.ActiveSkill.ZeroRay.desc: "ZeroRayDesc."
+Amlos.Combat.ActiveSkill.ZeroRay.name: "ZeroRay"
+Amlos.Combat.PassiveSkill.BurningBlood.desc: "BurningBloodDesc."
+Amlos.Combat.PassiveSkill.BurningBlood.name: "BurningBlood"
+Amlos.Combat.PassiveSkill.EarthProtection.desc: "EarthProtectionDesc."
+Amlos.Combat.PassiveSkill.EarthProtection.name: "EarthProtection"
+Amlos.Combat.PassiveSkill.FireTouch.desc: "FireTouchDesc."
+Amlos.Combat.PassiveSkill.FireTouch.name: "FireTouch"
+Amlos.Combat.PassiveSkill.GaleCombo.desc: "GaleComboDesc."
+Amlos.Combat.PassiveSkill.GaleCombo.name: "GaleCombo"
+Amlos.Combat.PassiveSkill.GazeFromAbyss.desc: "GazeFromAbyssDesc."
+Amlos.Combat.PassiveSkill.GazeFromAbyss.name: "GazeFromAbyss"
+Amlos.Combat.PassiveSkill.None.desc: "NoneDesc."
+Amlos.Combat.PassiveSkill.None.name: "None"
+Amlos.Combat.PassiveSkill.TranquilLake.desc: "TranquilLakeDesc."
+Amlos.Combat.PassiveSkill.TranquilLake.name: "TranquilLake"
