--- a/Base/Lang_MagicBookNames.yml
+++ b/Base/Lang_MagicBookNames.yml
@@ -13,7 +13,7 @@ Amlos.Combat.MagicBooks.Prefix.Common.Common.name: "Common "
 Amlos.Combat.MagicBooks.Prefix.Common.Plain.name: "Plain "
 Amlos.Combat.MagicBooks.Prefix.Common.Usual.name: "Usual "
 Amlos.Combat.MagicBooks.Prefix.Common.Familiar.name: "Familiar "
-Amlos.Combat.MagicBooks.Prefix.Common.Lost.name: "Lost "
+Amlos.Combat.MagicBooks.Prefix.Rare.Lost.name: "Lost "
 Amlos.Combat.MagicBooks.Prefix.Rare.OneChapterof.name: "One Chapter of "
 Amlos.Combat.MagicBooks.Prefix.Rare.Unusual.name: "Unusual "
 Amlos.Combat.MagicBooks.Prefix.Rare.Rarefied.name: "Rarefied "
