--- a/Base/Lang_Skills.yml
+++ b/Base/Lang_Skills.yml
@@ -156,3 +156,5 @@ Amlos.Combat.PassiveSkill.None.desc: "NoneDesc."
 Amlos.Combat.PassiveSkill.None.name: "None"
 Amlos.Combat.PassiveSkill.TranquilLake.desc: "TranquilLakeDesc."
 Amlos.Combat.PassiveSkill.TranquilLake.name: "TranquilLake"
+Amlos.Combat.PassiveSkill.BlindingLight.name: "BlindingLight"
+Amlos.Combat.PassiveSkill.BlindingLight.desc: "BlindingLightDesc."
