--- a/Base/Lang_Combat.yml
+++ b/Base/Lang_Combat.yml
@@ -142,6 +142,68 @@ Amlos.Combat.ActiveSkill.WindWall.desc: "WindWallDesc."
 Amlos.Combat.ActiveSkill.WindWall.name: "WindWall"
 Amlos.Combat.ActiveSkill.ZeroRay.desc: "ZeroRayDesc."
 Amlos.Combat.ActiveSkill.ZeroRay.name: "ZeroRay"
+Amlos.Combat.Effect.Burning.desc: "BurningDesc."
+Amlos.Combat.Effect.Burning.name: "Burning"
+Amlos.Combat.Effect.Charge.desc: "ChargeDesc."
+Amlos.Combat.Effect.Charge.name: "Charge"
+Amlos.Combat.Effect.CountShield.desc: "CountShieldDesc."
+Amlos.Combat.Effect.CountShield.name: "CountShield"
+Amlos.Combat.Effect.Crack.desc: "CrackDesc."
+Amlos.Combat.Effect.Crack.name: "Crack"
+Amlos.Combat.Effect.DarkIrradiated.desc: "DarkIrradiatedDesc."
+Amlos.Combat.Effect.DarkIrradiated.name: "DarkIrradiated"
+Amlos.Combat.Effect.Diffusion.desc: "DiffusionDesc."
+Amlos.Combat.Effect.Diffusion.name: "Diffusion"
+Amlos.Combat.Effect.Dusted.desc: "DustedDesc."
+Amlos.Combat.Effect.Dusted.name: "Dusted"
+Amlos.Combat.Effect.Eclipse.desc: "EclipseDesc."
+Amlos.Combat.Effect.Eclipse.name: "Eclipse"
+Amlos.Combat.Effect.Endure.desc: "EndureDesc."
+Amlos.Combat.Effect.Endure.name: "Endure"
+Amlos.Combat.Effect.Evaporate.desc: "EvaporateDesc."
+Amlos.Combat.Effect.Evaporate.name: "Evaporate"
+Amlos.Combat.Effect.Frozen.desc: "FrozenDesc."
+Amlos.Combat.Effect.Frozen.name: "Frozen"
+Amlos.Combat.Effect.Immobilize.desc: "ImmobilizeDesc."
+Amlos.Combat.Effect.Immobilize.name: "Immobilize"
+Amlos.Combat.Effect.LavaBurning.desc: "LavaBurningDesc."
+Amlos.Combat.Effect.LavaBurning.name: "LavaBurning"
+Amlos.Combat.Effect.LightBarrierStatus.desc: "LightBarrierStatusDesc."
+Amlos.Combat.Effect.LightBarrierStatus.name: "LightBarrierStatus"
+Amlos.Combat.Effect.PhysicalVulnerable.desc: "PhysicalVulnerableDesc."
+Amlos.Combat.Effect.PhysicalVulnerable.name: "PhysicalVulnerable"
+Amlos.Combat.Effect.Poison.desc: "PoisonDesc."
+Amlos.Combat.Effect.Poison.name: "Poison"
+Amlos.Combat.Effect.Power.desc: "PowerDesc."
+Amlos.Combat.Effect.Power.name: "Power"
+Amlos.Combat.Effect.Resistance.desc: "ResistanceDesc."
+Amlos.Combat.Effect.Resistance.name: "Resistance"
+Amlos.Combat.Effect.Salvation.desc: "SalvationDesc."
+Amlos.Combat.Effect.Salvation.name: "Salvation"
+Amlos.Combat.Effect.ShimmeringBlessingStatus.desc: "ShimmeringBlessingStatusDesc."
+Amlos.Combat.Effect.ShimmeringBlessingStatus.name: "ShimmeringBlessingStatus"
+Amlos.Combat.Effect.Slowness.desc: "SlownessDesc."
+Amlos.Combat.Effect.Slowness.name: "Slowness"
+Amlos.Combat.Effect.SomeForNoneBurn.desc: "SomeForNoneBurnDesc."
+Amlos.Combat.Effect.SomeForNoneBurn.name: "SomeForNoneBurn"
+Amlos.Combat.Effect.SoulTrace.desc: "SoulTraceDesc."
+Amlos.Combat.Effect.SoulTrace.name: "SoulTrace"
+Amlos.Combat.Effect.Sunflare.desc: "SunflareDesc."
+Amlos.Combat.Effect.Sunflare.name: "Sunflare"
+Amlos.Combat.Effect.Sunken.desc: "SunkenDesc."
+Amlos.Combat.Effect.Sunken.name: "Sunken"
+Amlos.Combat.Effect.Superposition.desc: "SuperpositionDesc."
+Amlos.Combat.Effect.Superposition.name: "Superposition"
+Amlos.Combat.Effect.Swamp.desc: "SwampDesc."
+Amlos.Combat.Effect.Swamp.name: "Swamp"
+Amlos.Combat.Effect.Swiftness.desc: "SwiftnessDesc."
+Amlos.Combat.Effect.Swiftness.name: "Swiftness"
+Amlos.Combat.Effect.Voidness.desc: "VoidnessDesc."
+Amlos.Combat.Effect.Voidness.name: "Voidness"
+Amlos.Combat.Effect.Vulnerable.desc: "VulnerableDesc."
+Amlos.Combat.Effect.Vulnerable.name: "Vulnerable"
+Amlos.Combat.Effect.Weakness.desc: "WeaknessDesc."
+Amlos.Combat.Effect.Weakness.name: "Weakness"
 Amlos.Combat.PassiveSkill.BurningBlood.desc: "BurningBloodDesc."
 Amlos.Combat.PassiveSkill.BurningBlood.name: "BurningBlood"
 Amlos.Combat.PassiveSkill.EarthProtection.desc: "EarthProtectionDesc."
@@ -156,5 +218,3 @@ Amlos.Combat.PassiveSkill.None.desc: "NoneDesc."
 Amlos.Combat.PassiveSkill.None.name: "None"
 Amlos.Combat.PassiveSkill.TranquilLake.desc: "TranquilLakeDesc."
 Amlos.Combat.PassiveSkill.TranquilLake.name: "TranquilLake"
-Amlos.Combat.PassiveSkill.BlindingLight.name: "BlindingLight"
-Amlos.Combat.PassiveSkill.BlindingLight.desc: "BlindingLightDesc."
