--- a/Base/Lang_Combat.yml
+++ b/Base/Lang_Combat.yml
@@ -170,6 +170,8 @@ Amlos.Combat.Effect.LavaBurning.desc: "LavaBurningDesc."
 Amlos.Combat.Effect.LavaBurning.name: "LavaBurning"
 Amlos.Combat.Effect.LightBarrierStatus.desc: "LightBarrierStatusDesc."
 Amlos.Combat.Effect.LightBarrierStatus.name: "LightBarrierStatus"
+Amlos.Combat.Effect.MagicalVulnerable.desc: "MagicalVulnerableDesc."
+Amlos.Combat.Effect.MagicalVulnerable.name: "MagicalVulnerable"
 Amlos.Combat.Effect.PhysicalVulnerable.desc: "PhysicalVulnerableDesc."
 Amlos.Combat.Effect.PhysicalVulnerable.name: "PhysicalVulnerable"
 Amlos.Combat.Effect.Poison.desc: "PoisonDesc."
