--- a/Base/Lang_UI.yml
+++ b/Base/Lang_UI.yml
@@ -1,6 +1,9 @@
 Amlos.UI.Common.Back.name: "Back"
 Amlos.UI.Common.Confirm.name: "Confirm"
 Amlos.UI.PausePanel.Resume.name: "Resume"
+Amlos.UI.PausePanel.Restart.name: "Restart"
+Amlos.UI.PausePanel.Quit.name: "Quit"
+Amlos.UI.PausePanel.Settings.name: "Settings"
 Amlos.UI.PausePanel.title: "Pause"
 Amlos.UI.Setting.Control.title: "Control"
 Amlos.UI.Setting.Graphics.title: "Graphic"
