--- a/Base/Lang_UI.yml
+++ b/Base/Lang_UI.yml
@@ -1,5 +1,7 @@
 Amlos.UI.Common.Back.name: "Back"
 Amlos.UI.Common.Confirm.name: "Confirm"
+Amlos.UI.Common.Off.name: "Some switch is off"
+Amlos.UI.Common.On.name: "Some switch is on"
 Amlos.UI.PausePanel.Resume.name: "Resume"
 Amlos.UI.PausePanel.Restart.name: "Restart"
 Amlos.UI.PausePanel.Quit.name: "Quit"
