--- a/Base/Lang_UI.yml
+++ b/Base/Lang_UI.yml
@@ -13,3 +13,7 @@ Amlos.UI.Setting.Language.title: "Language"
 Amlos.UI.Setting.Name: "Setting"
 Amlos.UI.Setting.Other.title: "Other"
 Amlos.UI.Setting.Sound.title: "Sound"
+Amlos.UI.Setting.Sound.Global.name: "Global Sound"
+Amlos.UI.Setting.Sound.Effect.name: "Effect Sound"
+Amlos.UI.Setting.Sound.Background.name: "Background Sound"
+Amlos.UI.Setting.Sound.Ambient.name: "Ambient Sound"
