--- a/Base/Lang_UI.yml
+++ b/Base/Lang_UI.yml
@@ -17,3 +17,4 @@ Amlos.UI.Setting.Sound.Global.name: "Global Sound"
 Amlos.UI.Setting.Sound.Effect.name: "Effect Sound"
 Amlos.UI.Setting.Sound.Background.name: "Background Sound"
 Amlos.UI.Setting.Sound.Ambient.name: "Ambient Sound"
+Amlos.UI.Setting.Sound.UI.name: "UI Sound"
