--- a/Base/Lang_Combat.yml
+++ b/Base/Lang_Combat.yml
@@ -56,6 +56,8 @@ Amlos.Combat.ActiveSkill.FlowerPower.desc: "FlowerPowerDesc."
 Amlos.Combat.ActiveSkill.FlowerPower.name: "FlowerPower"
 Amlos.Combat.ActiveSkill.FlowofWater.desc: "FlowofWaterDesc."
 Amlos.Combat.ActiveSkill.FlowofWater.name: "FlowofWater"
+Amlos.Combat.ActiveSkill.GravBomb.desc: "GravBombDesc."
+Amlos.Combat.ActiveSkill.GravBomb.name: "GravBomb"
 Amlos.Combat.ActiveSkill.GustMissile.desc: "GustMissileDesc."
 Amlos.Combat.ActiveSkill.GustMissile.name: "GustMissile"
 Amlos.Combat.ActiveSkill.HeatWave.desc: "HeatWaveDesc."
@@ -208,7 +210,15 @@ Amlos.Combat.PassiveSkill.GaleCombo.desc: "GaleComboDesc."
 Amlos.Combat.PassiveSkill.GaleCombo.name: "GaleCombo"
 Amlos.Combat.PassiveSkill.GazeFromAbyss.desc: "GazeFromAbyssDesc."
 Amlos.Combat.PassiveSkill.GazeFromAbyss.name: "GazeFromAbyss"
+Amlos.Combat.PassiveSkill.KarisArmor.desc: "KarisArmorDesc."
+Amlos.Combat.PassiveSkill.KarisArmor.name: "KarisArmor"
 Amlos.Combat.PassiveSkill.None.desc: "NoneDesc."
 Amlos.Combat.PassiveSkill.None.name: "None"
+Amlos.Combat.PassiveSkill.SolarBless.desc: "SolarBlessDesc."
+Amlos.Combat.PassiveSkill.SolarBless.name: "SolarBless"
+Amlos.Combat.PassiveSkill.Starcrack.desc: "StarcrackDesc."
+Amlos.Combat.PassiveSkill.Starcrack.name: "Starcrack"
 Amlos.Combat.PassiveSkill.TranquilLake.desc: "TranquilLakeDesc."
 Amlos.Combat.PassiveSkill.TranquilLake.name: "TranquilLake"
+Amlos.Combat.PassiveSkill.Windblower.desc: "WindblowerDesc."
+Amlos.Combat.PassiveSkill.Windblower.name: "Windblower"
