--- a/Base/Lang_UI.yml
+++ b/Base/Lang_UI.yml
@@ -8,10 +8,22 @@ Amlos.UI.PausePanel.Quit.name: "Quit"
 Amlos.UI.PausePanel.Settings.name: "Settings"
 Amlos.UI.PausePanel.title: "Pause"
 Amlos.UI.Setting.Control.title: "Control"
+Amlos.UI.Setting.Credit.title: "Credit"
 Amlos.UI.Setting.Graphics.title: "Graphic"
+Amlos.UI.Setting.Graphics.UIScale.name: "UI Scale"
+Amlos.UI.Setting.Graphics.FPS.name: FPS
+Amlos.UI.Setting.Graphics.Particle.name: Particle
+Amlos.UI.Setting.Graphics.Resolution.name: "Resolution"
+Amlos.UI.Setting.Graphics.VSync.name: "Vertical Sync"
+Amlos.UI.Setting.Graphics.FullScreen.name: "Full Screen"
+Amlos.UI.Setting.Graphics.Light.name: "Light"
+Amlos.UI.Setting.Graphics.Light.BrightnessChange.name: "Brightness Change"
+Amlos.UI.Setting.Graphics.Light.ColorChange.name: "Color Change"
 Amlos.UI.Setting.Language.title: "Language"
-Amlos.UI.Setting.Name: "Setting"
+Amlos.UI.Setting.title: "Setting"
 Amlos.UI.Setting.Other.title: "Other"
+Amlos.UI.Setting.Other.Reset.name: "Reset Settings"
+Amlos.UI.Setting.Other.OpenSaveFolder.name: "Open Save Folder"
 Amlos.UI.Setting.Sound.title: "Sound"
 Amlos.UI.Setting.Sound.Global.name: "Global Sound"
 Amlos.UI.Setting.Sound.Effect.name: "Effect Sound"
