--- a/Base/Lang_RandomNames_NPC.yml
+++ b/Base/Lang_RandomNames_NPC.yml
@@ -1,3 +1,4 @@
+# List of random names for NPC
 Amlos.NPC.Kitsuru.FirstName.Haruki.name: "Haruki"
 Amlos.NPC.Kitsuru.FirstName.Yuki.name: "Yuki"
 Amlos.NPC.Kitsuru.FirstName.Aiko.name: "Aiko"
