--- a/Base/Lang_Combat.yml
+++ b/Base/Lang_Combat.yml
@@ -1,3 +1,4 @@
+# relate to combat, like active/passive skills, effect, etc.
 Amlos.Combat.ActiveSkill.AbsoluteZero.desc: "AbsoluteZeroDesc."
 Amlos.Combat.ActiveSkill.AbsoluteZero.name: "AbsoluteZero"
 Amlos.Combat.ActiveSkill.AbyssalDevour.desc: "AbyssalDevourDesc."
