Update book localization

--- a/Base/Lang_MagicBookNames.yml
+++ b/Base/Lang_MagicBookNames.yml
@@ -225,3 +225,4 @@ Amlos.Combat.MagicBooks.Suffix.Arcane.EctoplasmicEssence.name: "Ectoplasmic Esse
 Amlos.Combat.MagicBooks.Suffix.Arcane.SpectralSentience.name: "Spectral Sentience"
 Amlos.Combat.MagicBooks.Suffix.Arcane.AstralVerses.name: "Astral Verses"
 Amlos.Combat.MagicBooks.Suffix.Arcane.ArcaneVerses.name: "Arcane Verses"
+Amlos.Combat.MagicBooks.Suffix.Arcane.Ixiims.name: "Arcane Notes from Ixiim"
